--- a/iosapp.html
+++ b/iosapp.html
@@ -5,7 +5,7 @@
     <body>
         <h1>
         <h2>version:0.0.1</h2>
-        <a href="itms-services://?action=download-manifest&url=https://192.168.1.4/ios/0.0.1/manifest.plist">donload</a>
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/xubing/test2/main/manifest.plist">donload</a>
         </h1>
     </body>
 </html>
